# OSAI-cli

./: README.md  TODO  dependencies  memo  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  OSAIP  memo  tauri.conf.json
src-tauri/src/: client.rs  client_file.rs  file_copy.rs  file_download.rs  file_read.rs  file_receive.rs  file_server.rs  format_handler.rs  get_dir.rs  http_server.rs  main.rs  net_arc.rs  server.rs  server_signal.rs  websocket.rs
src-tauri/src/AI/: diff_img.rs  hebbian_local.rs  mod.rs  state.rs
tauri-app/src/: App.css  App.tsx  FileDropZone.tsx  file_list.tsx  index.html  main.tsx  p2p.tsx  share.tsx  tailwind.config.js  wasm_loader.tsx  world_list.json  world_page.tsx  world_search.tsx
tauri-app/src/p2p/: host_nodes.tsx
tauri-app/src/style/: aqua.scss
tauri-app/src/worlds/: game1.html
